--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -16,8 +16,13 @@ body {
   overflow: hidden;
   -webkit-appearance: none;
   -moz-appearance: none;
-  appearance: none
+  appearance: none;
+  background: #c7c7c7;
 }
 img {
   max-width: 100%;
+}
+
+a {
+  text-decoration: none;
 }
