color codes in header moved to variable.scss

--- a/src/styles/constant/_variables.scss
+++ b/src/styles/constant/_variables.scss
@@ -1,2 +1,12 @@
 // App main colors
 $primary-color: #00637b;
+$body-background: #c7c7c7;
+
+//header
+$header-title-color: #121212;
+$header-desc-color: #070707;
+$header-before-background: rgba(0,0,0,.13);
+
+//button
+$button-background: #376fe1;
+$button-color: #FFF;
