--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -5,6 +5,7 @@
   position: relative;
   margin-bottom: 30px;
   background-size: 100%;
+  background-size: cover;
   &:before {
     content: '';
     position: absolute;
@@ -12,7 +13,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background: rgba(0,0,0,.13);
+    background: $header-before-background;
   }
   &__container {
     position: relative;
@@ -23,13 +24,13 @@
   }
   &__title {
     font: 700 36px $font-family;
-    color: #121212;
+    color: $header-title-color;
     margin-bottom: 38px;
   }
   &__desc {
     font: 600 24px $font-family;
     margin-bottom: 24px;
-    color: #070707;
+    color: $header-desc-color;
   }
   &__img {
     position: absolute;
@@ -40,9 +41,9 @@
     }
   }
   &__btn {
-    background: #376fe1;
+    background: $button-background;
     font: 700 18px $font-family;
-    color: #FFF;
+    color: $button-color;
     text-transform: uppercase;
     display: inline-block;
     padding: 17px 120px;
@@ -56,7 +57,6 @@
   }
   @media (max-width: 850px) {
     .header {
-      background: #ebebeb;
       &__title {
         font-size: 24px;
         margin-bottom: 20px;
