--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -12,12 +12,11 @@ body {
   height: 100vh;
   width: 100%;
   font-family: $font-family;
-  scrollbar-width: none;
   overflow: hidden;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  background: #c7c7c7;
+  background: $body-background;
 }
 img {
   max-width: 100%;
