--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -40,6 +40,21 @@
       width: 100%
     }
   }
+  &__btn {
+    background: $button-background;
+    font: 700 1.125rem $font-family;
+    color: $button-color;
+    text-transform: uppercase;
+    display: inline-block;
+    padding: 17px 120px;
+    border-radius: 5px;
+    text-align: center;
+    cursor: pointer;
+  }
+  &--maxwidth {
+    max-width: 100%;
+    width: 510px;
+  }
   @media (max-width: 850px) {
     .header {
       &__title {
