add movieBox component

--- a/src/styles/constant/_variables.scss
+++ b/src/styles/constant/_variables.scss
@@ -10,3 +10,9 @@ $header-before-background: rgba(0,0,0,.13);
 //button
 $button-background: #376fe1;
 $button-color: #FFF;
+
+//movie-box
+$movie-box-background: #FFF;
+$movie-box-title-color: #636363;
+$movie-box-point-color: #ec561b;
+$movie-box-p-color: #636363;
