--- a/src/styles/constant/_variables.scss
+++ b/src/styles/constant/_variables.scss
@@ -16,3 +16,7 @@ $movie-box-background: #FFF;
 $movie-box-title-color: #636363;
 $movie-box-point-color: #ec561b;
 $movie-box-p-color: #636363;
+
+//Image
+$skeleton-background: #E2E2E2;
+$skeleton-after-background: linear-gradient(90deg, rgba(#fff, 0) 0, rgba(#fff, 0.2) 20%, rgba(#fff, 0.5) 60%, rgba(#fff, 0));
