--- a/src/components/MovieBox/style.scss
+++ b/src/components/MovieBox/style.scss
@@ -29,8 +29,7 @@
     width: 92px;
     height: 92px;
     background: #a1a1a1;
-    margin-right: 91px;
-    margin-bottom: 37px;
+    margin: 0 91px 37px 0;
     img {
       width: 100%;
       height: 100%;
@@ -49,6 +48,7 @@
     color: $movie-box-p-color;
     max-width: 100%;
     width: 345px;
+    margin-bottom: 20px;
   }
   &__ptext {
     &:after {
