--- a/src/components/MovieBox/style.scss
+++ b/src/components/MovieBox/style.scss
@@ -28,7 +28,7 @@
   &__poster {
     width: 92px;
     height: 92px;
-    background: #a1a1a1;
+    background: $movie-box-poster-background;
     margin: 0 91px 37px 0;
     img {
       width: 100%;
