--- a/src/view/Detail/style.scss
+++ b/src/view/Detail/style.scss
@@ -10,8 +10,8 @@
   }
   &__info {
     padding-right: 30px;
-    color: #636363;
-    font-size: 18px;
+    color: $detail-info-color;
+    font-size: 1.125rem;
     flex: 1;
     span {
       font-weight: 700
